--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.2",
+    "patch-package": "^6.2.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   }
 }
